--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,16 @@ jobs:
   create_release:
     name: Create release
     runs-on: ubuntu-latest
-    # Note this. We are going to use that in further jobs.
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
-      - name: Set variables
-        id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Print information
+        run: |
+          rustup show active-toolchain
+          rustc --version
+          cargo tree
+      - name: Build project
+        run: cargo build --release --locked
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
@@ -30,59 +32,12 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-          body: |
-            This is a new release of `to-html`. [Read the changelog here](https://github.com/Aloso/to-html/blob/${{ steps.vars.outputs.tag }}/CHANGELOG.md).
-
-            `to-html` is currently compatible with Linux, macOS and FreeBSD. If you're using Windows, I recommend to use WSL.
-
-            ### Installation
-            To install `to-html` on Linux or macOS, you can use the pre-built binaries below.
-
-            On FreeBSD, you need to build `to-html` with Cargo, Rusts package manager. To install the Rust toolchain, [see here](https://www.rust-lang.org/tools/install). Then run
-
-            ```shell
-            $ cargo install to-html
-            ```
-
-            You might have to add the `.cargo/bin` folder to your `PATH` afterwards.
-
-            Please file issues if you run into any problems or have suggestions.
-  release_assets:
-    name: Release assets
-    needs: create_release
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            platform: linux
-            file_ending: ''
-          - os: macos-latest
-            platform: macos
-            file_ending: ''
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Print information
-        run: |
-          rustup show active-toolchain
-          rustc --version
-          cargo tree
-      - name: Set variables
-        id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-
-      - name: Build project
-        run: cargo build --release --locked
-
       - name: Upload release assets
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_name: to-html_${{ matrix.platform }}_${{ steps.vars.outputs.tag }}${{ matrix.file_ending }}
-          asset_path: target/release/to-html${{ matrix.file_ending }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_name: to-html
+          asset_path: target/release/to-html
           asset_content_type: application/octet-stream
